SQL-Based Whitelist, Admin and Admin Ranks Loading Refactor and Developer Convenience Improvements (#11)
* Updates the way admin ranks and admins are loaded to the database to  the more modern way of "not waiting until the end of the round to sync changes to the database if needed" because that sucks

* Makes the database use utf8mb4_general_ci charset as it should have been already

* Updates recommended extensions, adds a proper launch.json to allow developers to launch with DreamDaemon instead of DreamSeeker

* Refactors the whitelist to work with a database instead of being restricted to just a .txt file

* Updates the feedback given to the user when they get denied entry because they aren't whitelisted, so it contains Nova's Discord link and more info on how to proceed

* Updates the database version and adds an entry to the database changelog for future reference

* Properly logs the `discord_reported` field that was added to the `ban` table

* Fixes the `who` field so that it also has a size of 4096, so that we don't run into issues where bans can't be issued because there's too many players on the server

* Fixes the whitelisting tgs command probably being completely non-functional (whoops!)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,10 @@
 {
     "recommendations": [
-        "gbasood.byond-dm-language-support",
         "platymuus.dm-langclient",
         "EditorConfig.EditorConfig",
-        "dbaeumer.vscode-eslint"
+        "dbaeumer.vscode-eslint",
+		"stylemistake.auto-comment-blocks",
+		"Donkie.vscode-tgstation-test-adapter",
+		"anturk.dmi-editor"
     ]
 }
